[FIX] fix img hero version mobile

--- a/assets/styles/base/_responsive.scss
+++ b/assets/styles/base/_responsive.scss
@@ -213,7 +213,7 @@ body {
     background-repeat: no-repeat;
     width: 100vw;
     min-width: 100vw;
-    height: 60vh;
+    height: 100vh;
     position: relative;
     left: 50%;
     right: 50%;
