--- a/assets/styles/layout/_hero.scss
+++ b/assets/styles/layout/_hero.scss
@@ -25,6 +25,7 @@
 	gap: 1.2em;
 	justify-content: center;
 	margin-top: 1.2em;
+	flex-direction: column;
 }
 .hero-btn {
 	padding: 0.7em 2em;
